A bit of refactoring, and now a naive way to change the background color using palette.

--- a/app/src/main/res/layout/fragment_setup.xml
+++ b/app/src/main/res/layout/fragment_setup.xml
@@ -19,7 +19,7 @@
     <Button
         android:id="@+id/open_gif_button"
         android:layout_width="0dp"
-        android:layout_height="100dp"
+        android:layout_height="wrap_content"
         android:text="@string/open_gif"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/change_scale_button"
@@ -29,9 +29,19 @@
     <Button
         android:id="@+id/change_scale_button"
         android:layout_width="0dp"
-        android:layout_height="100dp"
+        android:layout_height="wrap_content"
         android:text="@string/change_scale"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/change_color_button"
         app:layout_constraintStart_toEndOf="@+id/open_gif_button" />
+
+    <Button
+        android:id="@+id/change_color_button"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="@string/change_color"
+        android:enabled="false"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/change_scale_button" />
 </androidx.constraintlayout.widget.ConstraintLayout>
