--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,13 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:buttonBarStyle">@style/ButtonBar</item>
+        <item name="android:buttonBarButtonStyle">@style/ButtonBarButton</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
@@ -17,6 +19,14 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light">
         <item name="background">@android:color/transparent</item>
+    </style>
+
+    <style name="ButtonBar" parent="Widget.AppCompat.ButtonBar">
+        <item name="android:background">?android:attr/colorBackground</item>
+    </style>
+
+    <style name="ButtonBarButton" parent="Widget.AppCompat.Button.Borderless">
+        <item name="android:textAllCaps">false</item>
     </style>
 
 </resources>
