--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,13 +1,14 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:buttonBarStyle">@style/ButtonBar</item>
         <item name="android:buttonBarButtonStyle">@style/ButtonBarButton</item>
+        <item name="android:buttonStyle">@style/BaseButton</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
@@ -19,6 +20,17 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light">
         <item name="background">@android:color/transparent</item>
+    </style>
+
+    <style name="BaseButton" parent="Widget.AppCompat.Button">
+        <item name="android:textAllCaps">false</item>
+    </style>
+
+    <style name="BaseButton.Activate">
+        <item name="android:background">@drawable/shape_circle</item>
+        <item name="android:padding">32dp</item>
+        <item name="android:textAppearance">?android:attr/textAppearanceLarge</item>
+        <item name="android:elevation">4dp</item>
     </style>
 
     <style name="ButtonBar" parent="Widget.AppCompat.ButtonBar">
