--- a/app/src/main/res/layout/activity_setup.xml
+++ b/app/src/main/res/layout/activity_setup.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".LauncherActivity">
 
-    <fragment
+    <androidx.fragment.app.FragmentContainerView
         android:id="@+id/nav_host_fragment"
         android:name="net.redwarp.gifwallpaper.SetupFragment"
         android:layout_width="0dp"
