--- a/app/src/main/res/menu/extras.xml
+++ b/app/src/main/res/menu/extras.xml
@@ -2,11 +2,15 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:title="@string/clear_gif"
         android:id="@+id/clear_gif"
+        android:title="@string/clear_gif"
         app:showAsAction="never" />
     <item
         android:id="@+id/about"
         android:title="@string/about"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/privacy"
+        android:title="@string/privacy"
         app:showAsAction="never" />
 </menu>
