--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#ff9264</color>
+    <color name="colorPrimaryDark">#c86338</color>
+    <color name="colorAccent">#ff7a7a</color>
 
     <color name="black_overlay">#66000000</color>
 </resources>
