--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="title">16sp</dimen>
+    <dimen name="text_renderer_font_size">16sp</dimen>
     <dimen name="text_renderer_padding">64dp</dimen>
 </resources>
