--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#ff9264</color>
-    <color name="colorPrimaryDark">#c86338</color>
-    <color name="colorAccent">#ff7a7a</color>
+    <color name="colorPrimary">#d8aa8e</color>
+    <color name="colorPrimaryDark">#a57b60</color>
+    <color name="colorAccent">#2E688C</color>
 </resources>
