Create settings fragment, and fix the theme (kind of)

--- a/app/src/main/res/menu/extras.xml
+++ b/app/src/main/res/menu/extras.xml
@@ -6,6 +6,10 @@
         android:title="@string/clear_gif"
         app:showAsAction="never" />
     <item
+        android:id="@+id/settings"
+        android:title="Settings"
+        app:showAsAction="never" />
+    <item
         android:id="@+id/about"
         android:title="@string/about"
         app:showAsAction="never" />
