--- a/app/src/main/res/layout/fragment_launcher.xml
+++ b/app/src/main/res/layout/fragment_launcher.xml
@@ -1,17 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimaryDark"
     tools:context=".LauncherFragment">
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/button_first"
         style="@style/BaseButton.Activate"
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_gravity="center"
-        android:drawableTop="@drawable/phone_large"
-        android:text="@string/activate" />
+        android:text="@string/activate"
+        app:icon="@drawable/phone_large"
+        app:iconGravity="textTop"
+        app:iconTint="@null" />
 </FrameLayout>
