--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
+    <style name="AppTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
@@ -13,34 +13,37 @@
         <item name="android:windowTranslucentNavigation">true</item>
         <item name="android:navigationBarColor">@android:color/transparent</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="toolbarStyle">@style/Toolbar</item>
     </style>
 
-    <style name="AppTheme.NoActionBar">
-        <item name="windowActionBar">false</item>
-        <item name="windowNoTitle">true</item>
-    </style>
-
-    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light">
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.DayNight">
         <item name="background">@android:color/transparent</item>
     </style>
 
-    <style name="BaseButton" parent="Widget.AppCompat.Button">
+    <style name="BaseButton" parent="Widget.MaterialComponents.Button">
         <item name="android:textAllCaps">false</item>
     </style>
 
     <style name="BaseButton.Activate">
         <item name="android:background">@drawable/shape_circle</item>
-        <item name="android:padding">32dp</item>
+        <item name="android:textColor">@color/button_text_color_selector</item>
         <item name="android:textAppearance">?android:attr/textAppearanceLarge</item>
         <item name="android:elevation">4dp</item>
+        <item name="backgroundTint">?attr/colorSurface</item>
     </style>
 
-    <style name="ButtonBar" parent="Widget.AppCompat.ButtonBar">
-        <item name="android:background">?android:attr/colorBackground</item>
+    <style name="ButtonBar" parent="Widget.MaterialComponents.BottomAppBar">
+        <item name="android:background">?attr/colorSurface</item>
     </style>
 
-    <style name="ButtonBarButton" parent="Widget.AppCompat.Button.Borderless">
+    <style name="ButtonBarButton" parent="Widget.MaterialComponents.Button.TextButton">
         <item name="android:textAllCaps">false</item>
+        <item name="android:textColor">@color/button_text_color_selector</item>
+    </style>
+
+    <style name="Toolbar" parent="Widget.MaterialComponents.Toolbar.Primary">
+        <item name="android:background">?android:attr/colorBackground</item>
+        <item name="titleTextColor">?attr/colorOnBackground</item>
     </style>
 
 </resources>
