--- a/app/src/main/res/menu/extras.xml
+++ b/app/src/main/res/menu/extras.xml
@@ -7,7 +7,7 @@
         app:showAsAction="never" />
     <item
         android:id="@+id/settings"
-        android:title="Settings"
+        android:title="@string/settings"
         app:showAsAction="never" />
     <item
         android:id="@+id/about"
