--- a/app/src/main/res/layout/activity_launcher.xml
+++ b/app/src/main/res/layout/activity_launcher.xml
@@ -3,9 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_host_fragment"
-    android:name="net.redwarp.gifwallpaper.LauncherFragment"
+    android:name="net.redwarp.gifwallpaper.ui.LauncherFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:defaultNavHost="true"
-    tools:context=".LauncherActivity"
+    tools:context=".ui.LauncherActivity"
     tools:layout="@layout/fragment_setup" />
