--- a/app/src/main/res/xml/wallpaper.xml
+++ b/app/src/main/res/xml/wallpaper.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <wallpaper xmlns:android="http://schemas.android.com/apk/res/android"
     android:label="@string/app_name"
-    android:settingsActivity="net.redwarp.gifwallpaper.ui.SetupActivity"
+    android:settingsActivity="net.redwarp.gifwallpaper.ui.MainActivity"
     android:thumbnail="@drawable/ic_launcher_full" />
