--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,49 +1,4 @@
 <resources>
 
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:buttonBarStyle">@style/ButtonBar</item>
-        <item name="android:buttonBarButtonStyle">@style/ButtonBarButton</item>
-        <item name="android:buttonStyle">@style/BaseButton</item>
-
-<!--        <item name="android:windowTranslucentNavigation">true</item>-->
-<!--        <item name="android:navigationBarColor">@android:color/transparent</item>-->
-<!--        <item name="android:statusBarColor">@android:color/transparent</item>-->
-<!--        <item name="toolbarStyle">@style/Toolbar</item>-->
-    </style>
-
-    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.DayNight">
-        <item name="background">@android:color/transparent</item>
-    </style>
-
-    <style name="BaseButton" parent="Widget.MaterialComponents.Button">
-        <item name="android:textAllCaps">false</item>
-    </style>
-
-    <style name="BaseButton.Activate">
-        <item name="android:background">@drawable/shape_circle</item>
-        <item name="android:textColor">@color/button_text_color_selector</item>
-        <item name="android:textAppearance">?android:attr/textAppearanceLarge</item>
-        <item name="android:elevation">4dp</item>
-        <item name="backgroundTint">?attr/colorSurface</item>
-    </style>
-
-    <style name="ButtonBar" parent="Widget.MaterialComponents.BottomAppBar">
-        <item name="android:background">?attr/colorSurface</item>
-    </style>
-
-    <style name="ButtonBarButton" parent="Widget.MaterialComponents.Button.TextButton">
-        <item name="android:textAllCaps">false</item>
-        <item name="android:textColor">@color/button_text_color_selector</item>
-    </style>
-
-    <style name="Toolbar" parent="Widget.MaterialComponents.Toolbar.Primary">
-        <item name="android:background">?android:attr/colorBackground</item>
-        <item name="titleTextColor">?attr/colorOnBackground</item>
-    </style>
-
+    <style name="AppTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar" />
 </resources>
