Cleanup unused dependencies and resources

--- a/app/src/main/res/drawable/ic_rotate_90_degrees_cw.xml
+++ b/app/src/main/res/drawable/ic_rotate_90_degrees_cw.xml
@@ -5,5 +5,5 @@
     android:viewportHeight="24">
   <path
       android:pathData="M16.66,6.41L23.14,12.9L16.65,19.38L10.16,12.9L16.66,6.41ZM20.31,12.9L16.65,9.24L13,12.9L16.66,16.56L20.31,12.9ZM4.64,6.64C6.39,4.88 8.7,4 11,4V0.76L15.24,5L11,9.24V6C9.21,6 7.42,6.68 6.05,8.05C3.32,10.78 3.32,15.22 6.05,17.95C7.42,19.32 9.21,20 11,20C11.97,20 12.94,19.79 13.84,19.39L15.33,20.88C13.98,21.62 12.49,22 11,22C8.7,22 6.39,21.12 4.64,19.36C1.12,15.85 1.12,10.15 4.64,6.64Z"
-      android:fillColor="?android:attr/textColorPrimary"/>
+      android:fillColor="#FF000000"/>
 </vector>
