--- a/app/src/main/res/drawable/ic_collections.xml
+++ b/app/src/main/res/drawable/ic_collections.xml
@@ -5,5 +5,5 @@
     android:viewportHeight="24">
     <path
         android:pathData="M22,16V4C22,2.9 21.1,2 20,2H8C6.9,2 6,2.9 6,4V16C6,17.1 6.9,18 8,18H20C21.1,18 22,17.1 22,16ZM11,12L13.03,14.71L16,11L20,16H8L11,12ZM2,6V20C2,21.1 2.9,22 4,22H18V20H4V6H2Z"
-        android:fillColor="?android:attr/textColorPrimary" />
+        android:fillColor="#FF000000" />
 </vector>
