--- a/app/src/main/res/drawable/ic_color_lens_off.xml
+++ b/app/src/main/res/drawable/ic_color_lens_off.xml
@@ -23,7 +23,7 @@
     android:viewportHeight="24">
 
     <path
-        android:fillColor="?attr/colorOnSurface"
+        android:fillColor="#FF000000"
         android:pathData="M9.9,5.1l1.9,1.9l7.7,7.7c1-0.9,1.6-2.2,1.6-3.6c0-4.4-4-8-9-8c-1.2,0-2.4,0.2-3.5,0.7L9.9,5.1L9.9,5.1z
 M17.5,9c0.8,0,1.5,0.7,1.5,1.5c0,0.8-0.7,1.5-1.5,1.5S16,11.3,16,10.5C16,9.7,16.7,9,17.5,9z
 M14.5,5C15.3,5,16,5.7,16,6.5
