--- a/app/src/main/res/drawable/ic_transform.xml
+++ b/app/src/main/res/drawable/ic_transform.xml
@@ -5,5 +5,5 @@
     android:viewportHeight="24">
   <path
       android:pathData="M22,18V16H8V4H10L7,1L4,4H6V6H2V8H6V16C6,17.1 6.9,18 8,18H16V20H14L17,23L20,20H18V18H22ZM10,8H16V14H18V8C18,6.9 17.1,6 16,6H10V8Z"
-      android:fillColor="?android:attr/textColorPrimary"/>
+      android:fillColor="#FF000000"/>
 </vector>
