chore: Update phone launch graphic

--- a/app/src/main/res/drawable-night/phone_large.xml
+++ b/app/src/main/res/drawable-night/phone_large.xml
@@ -1,65 +1,54 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="60dp"
-    android:height="104dp"
+    android:height="102dp"
     android:viewportWidth="60"
-    android:viewportHeight="104">
-  <path
-      android:pathData="M52.5,12H7.5V90H52.5V12Z"
-      android:fillColor="#ffffff"/>
-  <path
-      android:pathData="M60,89.662C60,97.463 55.5,102.112 47.7,102.262C43.75,102.262 39.8,102.279 35.85,102.296C27.95,102.329 20.05,102.362 12.15,102.262C4.8,102.262 0.15,97.613 0,90.412V11.363C0,5.063 5.1,0.262 11.85,0.112C23.7,-0.038 35.55,-0.038 47.4,0.112C55.35,0.262 59.85,4.912 60,12.863V89.662ZM52.5,90H7.5V12H52.5V90Z"
-      android:fillColor="#000000"
-      android:fillType="evenOdd"/>
-  <path
-      android:pathData="M12,6a1.5,1.5 0,1 0,3 0a1.5,1.5 0,1 0,-3 0z"
-      android:fillColor="#ffffff"/>
-  <path
-      android:pathData="M20.5,4.5L41,4.5A1,1 0,0 1,42 5.5L42,6.5A1,1 0,0 1,41 7.5L20.5,7.5A1,1 0,0 1,19.5 6.5L19.5,5.5A1,1 0,0 1,20.5 4.5z"
-      android:fillColor="#ffffff"/>
-  <path
-      android:pathData="M20.5,94.5L41,94.5A1,1 0,0 1,42 95.5L42,96.5A1,1 0,0 1,41 97.5L20.5,97.5A1,1 0,0 1,19.5 96.5L19.5,95.5A1,1 0,0 1,20.5 94.5z"
-      android:fillColor="#ffffff"/>
+    android:viewportHeight="102">
   <group>
     <clip-path
-        android:pathData="M13.5,27h33v23.888h-33z"/>
+        android:pathData="M0,0h60v102H0z"/>
     <path
-        android:pathData="M13.5,27h33v23.888h-33z"
-        android:fillColor="#004789"/>
+        android:pathData="M6,10.5h48v81H6z"
+        android:fillColor="#F2EDDC"/>
+    <group>
+      <clip-path
+          android:pathData="M13.5,27h33v24L13.5,51z"/>
+      <path
+          android:pathData="M13.5,27h33v24h-33z"
+          android:fillColor="#004789"/>
+      <path
+          android:pathData="m37.5,41.96 l-4.5,4.52V51h13.5l-9,-9.04Z"
+          android:fillColor="#008400"/>
+      <path
+          android:pathData="M27,37.44 L13.5,51H39L27,37.44Z"
+          android:fillColor="#060"/>
+      <path
+          android:pathData="m27,40.6 l-1.5,-1.66 1.5,-1.51 4,4.52 -0.75,0.75 -2.5,-2.86 -0.75,0.75Z"
+          android:fillColor="#fff"/>
+      <path
+          android:pathData="M25.5,30.01c0,0.83 -0.67,1.51 -1.5,1.51 0.83,0 1.5,0.68 1.5,1.51 0,-0.83 0.67,-1.51 1.5,-1.51 -0.83,0 -1.5,-0.68 -1.5,-1.51Z"
+          android:fillColor="#FFF500"/>
+      <path
+          android:pathData="M16.5,30.01c0,0.83 -0.67,1.51 -1.5,1.51 0.83,0 1.5,0.68 1.5,1.51 0,-0.83 0.67,-1.51 1.5,-1.51 -0.83,0 -1.5,-0.68 -1.5,-1.51Z"
+          android:fillColor="#FF9264"/>
+      <path
+          android:pathData="M21,34.53c0,0.83 -0.67,1.51 -1.5,1.51 0.83,0 1.5,0.68 1.5,1.51 0,-0.83 0.67,-1.51 1.5,-1.51 -0.83,0 -1.5,-0.67 -1.5,-1.51ZM31.5,33.03c0,0.83 -0.67,1.51 -1.5,1.51 0.83,0 1.5,0.68 1.5,1.51 0,-0.83 0.67,-1.51 1.5,-1.51 -0.83,0 -1.5,-0.67 -1.5,-1.51Z"
+          android:fillColor="#fff"/>
+      <path
+          android:pathData="M34.5,33.78a3.75,3.77 0,1 0,7.5 0a3.75,3.77 0,1 0,-7.5 0z"
+          android:fillColor="#00095E"/>
+      <path
+          android:pathData="M36.06,30.68a3.77,3.77 0,0 0,-1.56 3.06,3.76 3.76,0 0,0 3.75,3.77 3.72,3.72 0,0 0,1.59 -0.35,6.03 6.03,0 0,1 -3.78,-6.47Z"
+          android:fillColor="#fff"/>
+    </group>
     <path
-        android:pathData="M37.5,41.888L33,46.388V50.888H46.5L37.5,41.888Z"
-        android:fillColor="#008400"/>
+        android:pathData="M26.62,75.31c-0.53,0.62 -1.27,1.1 -2.24,1.44 -0.96,0.34 -2.04,0.5 -3.21,0.5 -1.23,0 -2.32,-0.26 -3.25,-0.78 -0.93,-0.53 -1.64,-1.29 -2.15,-2.29 -0.5,-1 -0.76,-2.17 -0.77,-3.52v-0.94c0,-1.38 0.24,-2.58 0.71,-3.59 0.48,-1.02 1.17,-1.79 2.07,-2.32 0.91,-0.54 1.97,-0.81 3.18,-0.81 1.69,0 3.01,0.39 3.96,1.18 0.95,0.78 1.52,1.92 1.69,3.42h-2.86c-0.13,-0.79 -0.42,-1.38 -0.87,-1.74 -0.44,-0.37 -1.06,-0.55 -1.84,-0.55 -1,0 -1.76,0.37 -2.28,1.1 -0.52,0.73 -0.79,1.82 -0.79,3.26v0.89c0,1.45 0.28,2.55 0.85,3.3 0.57,0.74 1.4,1.11 2.49,1.11 1.1,0 1.89,-0.23 2.36,-0.69v-2.39h-2.67v-2.11h5.61v5.53ZM32.13,77.06h-2.93V63.19h2.93v13.87ZM43.43,71.39h-5.64v5.67h-2.93V63.19h9.27v2.32h-6.34v3.58h5.64v2.31Z"
+        android:fillColor="#000"/>
     <path
-        android:pathData="M27,37.388L13.5,50.888H39L27,37.388Z"
-        android:fillColor="#006600"/>
+        android:pathData="M18,93h25.5v6H18zM10.5,3h33v6h-33z"
+        android:fillColor="#F2EDDC"/>
     <path
-        android:pathData="M27,40.537L25.5,38.888L27,37.388L30.999,41.888L30.25,42.638L27.75,39.787L27,40.537Z"
-        android:fillColor="#ffffff"/>
-    <path
-        android:pathData="M25.5,30C25.5,30.828 24.828,31.5 24,31.5C24.828,31.5 25.5,32.172 25.5,33C25.5,32.172 26.172,31.5 27,31.5C26.172,31.5 25.5,30.828 25.5,30Z"
-        android:fillColor="#FFF500"/>
-    <path
-        android:pathData="M16.5,30C16.5,30.828 15.828,31.5 15,31.5C15.828,31.5 16.5,32.172 16.5,33C16.5,32.172 17.172,31.5 18,31.5C17.172,31.5 16.5,30.828 16.5,30Z"
-        android:fillColor="#FF9264"/>
-    <path
-        android:pathData="M21,34.5C21,35.328 20.328,36 19.5,36C20.328,36 21,36.672 21,37.5C21,36.672 21.672,36 22.5,36C21.672,36 21,35.328 21,34.5Z"
-        android:fillColor="#ffffff"/>
-    <path
-        android:pathData="M31.5,33C31.5,33.828 30.828,34.5 30,34.5C30.828,34.5 31.5,35.172 31.5,36C31.5,35.172 32.172,34.5 33,34.5C32.172,34.5 31.5,33.828 31.5,33Z"
-        android:fillColor="#ffffff"/>
-    <path
-        android:pathData="M38.25,33.75m-3.75,0a3.75,3.75 0,1 1,7.5 0a3.75,3.75 0,1 1,-7.5 0"
-        android:fillColor="#00095E"/>
-    <path
-        android:pathData="M36.058,30.66C35.114,31.341 34.5,32.45 34.5,33.703C34.5,35.774 36.179,37.453 38.25,37.453C38.819,37.453 39.358,37.326 39.841,37.1C37.594,36.233 36,34.053 36,31.5C36,31.215 36.02,30.934 36.058,30.66Z"
-        android:fillColor="#ffffff"/>
+        android:pathData="M48,102c7.5,0 12,-4.5 12,-12L60,12c0,-7.5 -4.5,-12 -12,-12L12,0C4.5,0 0,5.06 0,11.36L0,90c0,7.5 4.5,12 12,12h36ZM7.5,90h45L52.5,12h-45v78ZM13.5,7.5a1.5,1.5 0,1 0,0 -3,1.5 1.5,0 0,0 0,3ZM19.5,6A1.5,1.5 0,0 1,21 4.5h19.5a1.5,1.5 0,0 1,0 3L21,7.5A1.5,1.5 0,0 1,19.5 6ZM21,94.5a1.5,1.5 0,0 0,0 3h19.5a1.5,1.5 0,0 0,0 -3L21,94.5Z"
+        android:fillColor="#000"
+        android:fillType="evenOdd"/>
   </group>
-  <path
-      android:pathData="M27.372,73.802C26.858,74.418 26.131,74.897 25.192,75.24C24.252,75.576 23.211,75.744 22.069,75.744C20.869,75.744 19.815,75.484 18.907,74.963C18.006,74.437 17.308,73.675 16.813,72.678C16.324,71.682 16.073,70.51 16.06,69.165V68.222C16.06,66.838 16.292,65.642 16.756,64.633C17.225,63.617 17.898,62.842 18.774,62.309C19.656,61.77 20.688,61.5 21.869,61.5C23.513,61.5 24.798,61.894 25.725,62.681C26.652,63.461 27.201,64.601 27.372,66.099H24.592C24.465,65.305 24.182,64.725 23.744,64.356C23.313,63.988 22.716,63.804 21.954,63.804C20.983,63.804 20.244,64.169 19.736,64.899C19.228,65.629 18.971,66.715 18.965,68.156V69.041C18.965,70.495 19.241,71.593 19.793,72.336C20.345,73.078 21.154,73.45 22.221,73.45C23.294,73.45 24.059,73.221 24.516,72.764V70.374H21.916V68.27H27.372V73.802Z"
-      android:fillColor="#000000"/>
-  <path
-      android:pathData="M32.733,75.554H29.876V61.69H32.733V75.554Z"
-      android:fillColor="#000000"/>
-  <path
-      android:pathData="M43.73,69.888H38.246V75.554H35.389V61.69H44.416V64.004H38.246V67.584H43.73V69.888Z"
-      android:fillColor="#000000"/>
 </vector>
