--- a/app/src/main/res/drawable/phone_large.xml
+++ b/app/src/main/res/drawable/phone_large.xml
@@ -1,50 +1,42 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="60dp"
-    android:height="103.5dp"
-    android:viewportWidth="80"
-    android:viewportHeight="138">
-  <path
-      android:pathData="M70,16H10V120H70V16Z"
-      android:fillColor="#ffffff"/>
-  <path
-      android:pathData="M80,119.55C80,129.95 74,136.15 63.6,136.35C58.333,136.35 53.067,136.372 47.8,136.394C37.267,136.439 26.733,136.483 16.2,136.35C6.4,136.35 0.2,130.15 0,120.55V15.15C0,6.75 6.8,0.35 15.8,0.15C31.6,-0.05 47.4,-0.05 63.2,0.15C73.8,0.35 79.8,6.55 80,17.15V119.55ZM70,120H10V16H70V120Z"
-      android:fillColor="#000000"
-      android:fillType="evenOdd"/>
-  <path
-      android:pathData="M18,8m-2,0a2,2 0,1 1,4 0a2,2 0,1 1,-4 0"
-      android:fillColor="#ffffff"/>
-  <path
-      android:pathData="M27,6L55,6A1,1 0,0 1,56 7L56,9A1,1 0,0 1,55 10L27,10A1,1 0,0 1,26 9L26,7A1,1 0,0 1,27 6z"
-      android:fillColor="#ffffff"/>
-  <path
-      android:pathData="M27,126L55,126A1,1 0,0 1,56 127L56,129A1,1 0,0 1,55 130L27,130A1,1 0,0 1,26 129L26,127A1,1 0,0 1,27 126z"
-      android:fillColor="#ffffff"/>
+    android:height="102dp"
+    android:viewportWidth="60"
+    android:viewportHeight="102">
   <group>
     <clip-path
-        android:pathData="M18,36h44v31.85h-44z"/>
+        android:pathData="M0,0h60v102H0z"/>
     <path
-        android:pathData="M18,36h44v31.85h-44z"
-        android:fillColor="#69B7FF"/>
+        android:pathData="M6,10.5h48v81H6z"
+        android:fillColor="#fff"/>
+    <group>
+      <clip-path
+          android:pathData="M13.5,27h33v24L13.5,51z"/>
+      <path
+          android:pathData="M13.5,27h33v24h-33z"
+          android:fillColor="#69B7FF"/>
+      <path
+          android:pathData="m37.5,41.96 l-4.5,4.52V51h13.5l-9,-9.04Z"
+          android:fillColor="#67E863"/>
+      <path
+          android:pathData="M27,37.44 L13.5,51H39L27,37.44Z"
+          android:fillColor="#008400"/>
+      <path
+          android:pathData="m27,40.6 l-1.5,-1.66 1.5,-1.51 4,4.52 -0.75,0.75 -2.5,-2.86 -0.75,0.75Z"
+          android:fillColor="#fff"/>
+      <path
+          android:pathData="M34.5,33.78a3.75,3.77 0,1 0,7.5 0a3.75,3.77 0,1 0,-7.5 0z"
+          android:fillColor="#FFF500"/>
+    </group>
     <path
-        android:pathData="M50,55.85L44,61.85V67.85H62L50,55.85Z"
-        android:fillColor="#67E863"/>
+        android:pathData="M26.62,75.31c-0.53,0.62 -1.27,1.1 -2.24,1.44 -0.96,0.34 -2.04,0.5 -3.21,0.5 -1.23,0 -2.32,-0.26 -3.25,-0.78 -0.93,-0.53 -1.64,-1.29 -2.15,-2.29 -0.5,-1 -0.76,-2.17 -0.77,-3.52v-0.94c0,-1.38 0.24,-2.58 0.71,-3.59 0.48,-1.02 1.17,-1.79 2.07,-2.32 0.91,-0.54 1.97,-0.81 3.18,-0.81 1.69,0 3.01,0.39 3.96,1.18 0.95,0.78 1.52,1.92 1.69,3.42h-2.86c-0.13,-0.79 -0.42,-1.38 -0.87,-1.74 -0.44,-0.37 -1.06,-0.55 -1.84,-0.55 -1,0 -1.76,0.37 -2.28,1.1 -0.52,0.73 -0.79,1.82 -0.79,3.26v0.89c0,1.45 0.28,2.55 0.85,3.3 0.57,0.74 1.4,1.11 2.49,1.11 1.1,0 1.89,-0.23 2.36,-0.69v-2.39h-2.67v-2.11h5.61v5.53ZM32.13,77.06h-2.93V63.19h2.93v13.87ZM43.43,71.39h-5.64v5.67h-2.93V63.19h9.27v2.32h-6.34v3.58h5.64v2.31Z"
+        android:fillColor="#000"/>
     <path
-        android:pathData="M36,49.85L18,67.85H52L36,49.85Z"
-        android:fillColor="#008400"/>
+        android:pathData="M18,93h25.5v6H18zM10.5,3h33v6h-33z"
+        android:fillColor="#fff"/>
     <path
-        android:pathData="M36,54.05L34,51.85L36,49.85L41.332,55.85L40.333,56.85L37,53.05L36,54.05Z"
-        android:fillColor="#ffffff"/>
-    <path
-        android:pathData="M51,45m-5,0a5,5 0,1 1,10 0a5,5 0,1 1,-10 0"
-        android:fillColor="#FFF500"/>
+        android:pathData="M48,102c7.5,0 12,-4.5 12,-12L60,12c0,-7.5 -4.5,-12 -12,-12L12,0C4.5,0 0,5.06 0,11.36L0,90c0,7.5 4.5,12 12,12h36ZM7.5,90h45L52.5,12h-45v78ZM13.5,7.5a1.5,1.5 0,1 0,0 -3,1.5 1.5,0 0,0 0,3ZM19.5,6A1.5,1.5 0,0 1,21 4.5h19.5a1.5,1.5 0,0 1,0 3L21,7.5A1.5,1.5 0,0 1,19.5 6ZM21,94.5a1.5,1.5 0,0 0,0 3h19.5a1.5,1.5 0,0 0,0 -3L21,94.5Z"
+        android:fillColor="#000"
+        android:fillType="evenOdd"/>
   </group>
-  <path
-      android:pathData="M36.496,98.402C35.811,99.223 34.841,99.862 33.589,100.319C32.336,100.768 30.948,100.992 29.425,100.992C27.825,100.992 26.42,100.645 25.21,99.951C24.008,99.249 23.077,98.233 22.417,96.904C21.765,95.576 21.431,94.014 21.414,92.22V90.963C21.414,89.118 21.723,87.522 22.341,86.177C22.967,84.823 23.864,83.79 25.032,83.079C26.209,82.36 27.584,82 29.158,82C31.35,82 33.064,82.525 34.3,83.574C35.535,84.615 36.268,86.134 36.496,88.132H32.789C32.62,87.074 32.243,86.299 31.659,85.809C31.084,85.318 30.288,85.072 29.272,85.072C27.978,85.072 26.992,85.559 26.315,86.532C25.637,87.506 25.295,88.953 25.286,90.874V92.055C25.286,93.993 25.654,95.457 26.391,96.447C27.127,97.438 28.206,97.933 29.628,97.933C31.058,97.933 32.078,97.628 32.688,97.019V93.832H29.222V91.026H36.496V98.402Z"
-      android:fillColor="#000000"/>
-  <path
-      android:pathData="M43.644,100.738H39.835V82.254H43.644V100.738Z"
-      android:fillColor="#000000"/>
-  <path
-      android:pathData="M58.307,93.185H50.994V100.738H47.186V82.254H59.221V85.339H50.994V90.112H58.307V93.185Z"
-      android:fillColor="#000000"/>
 </vector>
