--- a/website/themes/juice/sass/_text.scss
+++ b/website/themes/juice/sass/_text.scss
@@ -1,13 +1,14 @@
 .heading-text {
-  font-family: "Fira Sans", sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 32px;
   font-weight: 600;
   padding: 10px 0 25px 0;
   color: var(--primary-text-color);
 }
 
-h1, .title-text {
-  font-family: "Fira Sans", sans-serif;
+h1,
+.title-text {
+  font-family: "Roboto", sans-serif;
   font-size: 25px;
   font-weight: 500;
   color: var(--primary-text-color);
@@ -15,15 +16,16 @@ h1, .title-text {
   padding-left: 10px;
 }
 
-h2, .subtitle-text {
-  font-family: "Fira Sans", sans-serif;
+h2,
+.subtitle-text {
+  font-family: "Roboto", sans-serif;
   font-size: 20px;
   font-weight: 500;
   color: var(--primary-text-color);
 }
 
 .text {
-  font-family: "Fira Sans", sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 18px;
   font-weight: 400;
   line-height: 26px;
@@ -32,7 +34,7 @@ h2, .subtitle-text {
 }
 
 .subtext {
-  font-family: "Fira Sans", sans-serif;
+  font-family: "Roboto", "Fira Sans", sans-serif;
   font-size: 16px;
   font-weight: 400;
   letter-spacing: 0.1px;
