--- a/website/themes/juice/templates/page.html
+++ b/website/themes/juice/templates/page.html
@@ -1,5 +1,5 @@
 {% import "_macros.html" as macros %} {% extends "index.html" %} {% block title
 %}{{ page.title }} | {{ super() }} {% endblock title %} {% block header %}
-<header class="box-shadow">{{ macros::render_header() }}</header>
+<header>{{ macros::render_header() }}</header>
 {% endblock header %} {% block content %} {{ page.content | safe }} {% endblock
 content %}
